clusters/agora/default/wellhello-api-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellhello-api-d
  namespace: default
  labels:
    app: wellhello-api
    pod-security.kubernetes.io/audit: baseline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wellhello-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: wellhello-api
    spec:
      serviceAccountName: wellhello-api-svc-a
      imagePullSecrets:
      - name: regcred
      containers:
      - name: wellhello-api
        image: "europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/wellhello_api:1.20.1" # {"$imagepolicy": "flux-system:wellhello-api"}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 3000
          name: backend-open
        securityContext:
          # runAsNonRoot: true
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: wellhello-api-service
  namespace: default
spec:
  selector:
    app: wellhello-api
  ports:
  - protocol: TCP
    port: 3001
    targetPort: backend-open
