clusters/agora/default/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  labels:
    name: longhorn-ingress
spec:
  rules:
  - host: longhorn.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80
